<resources>
    <string name="app_name">Recipes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_image">Personal Image</string>
    <string name="add_profile_pic">Add Profile Pic</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="favourite_recipe">Favourite Recipe</string>
    <string name="food_name">Food Name</string>
    <string name="food_area">Food Area</string>
    <string name="hello_fola">Hello {Fola}</string>
    <string name="what_are_you_cooking_today">What are you cooking today?</string>
    <string name="youtube_link">Youtube Link:</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="let_s_help_you_set_up_your_account_nit_s_just_a_few_steps_away">Let\'s Help you set up your account,\nIt\'s just a few steps away</string>
    <string name="enter_name">Enter Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_a_member">Already a member?</string>
    <string name="_100k_recipes">100K+ Recipes</string>
    <string name="get_ncooking">Get\nCooking</string>
    <string name="simple_way_to_find_tasty_recipe">Simple Way To Find Tasty Recipe</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="food">Food</string>
    <string name="foodname">FoodName</string>
    <string name="measure">Measure</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_to_favourite">Added to favourites</string>
    <string name="failed_to_add">Failed to add to favourites</string>
    <string name="instructions">Instructions: \n%s</string>
</resources>