<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_exit_to_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:cardCornerRadius="120dp">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:contentDescription="@string/personal_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/icEditProfile"
                    android:layout_width="28dp"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="-5dp"
                    android:contentDescription="@string/add_profile_pic"
                    android:src="@drawable/ic_add" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/email" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <TextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:text="@string/favourite_recipe"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>